--- a/index.html
+++ b/index.html
@@ -119,6 +119,31 @@
   color: #180142;
   transition: 0.5s;
 }
+			
+			.okay{
+			width: 30%;	
+			}
+			.okay1{
+			width: 13%;	
+			}
+			
+			@media (max-width: 480px) {
+	.okay{
+			width: 60%;	
+			}
+			.okay1{
+			width: 26%;	
+			}
+}
+
+@media (max-width: 768px) {
+.okay{
+			width: 45%;	
+			}
+			.okay1{
+			width: 18%;	
+			}	
+}
 
 		</style>
 	</head>
@@ -127,9 +152,9 @@
 	<div style="width:100%; height: 100vh; background-image: url(images/back.jpg); background-size: cover;">
 		<center>
 			<br><br><br><br><br><br>
-			<img src="images/logo.png" width="30%" align="center"/>
+			<img src="images/logo.png" class="okay" align="center"/>
 			<br>
-			<img src="images/event.png" width="13%" align="center" style="margin-top: -30px;"/>
+			<img src="images/event.png" class="okay1" align="center" style="margin-top: -30px;"/>
 			
 			</center>
 			<img src="images/logo2.png" width="15%" style="position: absolute; right: 50px; top: 20px;">
