--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@
 
 @media (max-width: 768px) {
 .okay{
-			width: 45%;	
+	margin-top: 50px;		
+	width: 60%;	
 			}
 			.okay1{
-			width: 18%;	
+			width: 26%;	
 			}	
 }
 
