--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
 			.okay1{
 			width: 13%;	
 			}
+			.okay2{
+			width: 15%;	
+			}
 			
 			@media (max-width: 600px) {
 	.okay{
@@ -134,6 +137,9 @@
 			}
 			.okay1{
 			width: 24%;	
+			}
+				.okay2{
+			width: 0%;	
 			}
 }
 
@@ -145,6 +151,9 @@
 			.okay1{
 			width: 20%;	
 			}	
+	.okay2{
+			width: 0%;	
+			}
 }
 
 		</style>
@@ -159,7 +168,7 @@
 			<img src="images/event.png" class="okay1" align="center" style="margin-top: -30px;"/>
 			
 			</center>
-			<img src="images/logo2.png" width="15%" style="position: absolute; right: 50px; top: 20px;">
+			<img src="images/logo2.png" class="okay2" style="position: absolute; right: 50px; top: 20px;">
 	</div>
 	<div class="container" style="margin-top:100px;">
 		<div class="row">
