--- a/robosoccer.html
+++ b/robosoccer.html
@@ -27,7 +27,7 @@
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
-  padding: 16px 32px;
+  padding: 16px 16px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -73,7 +73,7 @@
 					<h1 style="color: #333; font-family: 'Abel', sans-serif; font-size: 18px; margin-top: 0px">Time: 10AM Onwards </h1>
 					<h1 style="color: #333; font-family: 'Abel', sans-serif; font-size: 18px; margin-top: 0px">Prizes Worth: 15K </h1>
 					<h1 style="color: #333; font-family: 'Abel', sans-serif; font-size: 18px; margin-top: 0px">Team Size: 1-4 members. </h1>
-					<a href="https://docs.google.com/forms/d/e/1FAIpQLSd_oXX_RldmfdUk1O8szYOpazLnuU8NXn7d0yA4ZGZLjNNSvw/viewform" style="text-decoration: none;"><button class="button button5">REGISTER</button></a>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSd_oXX_RldmfdUk1O8szYOpazLnuU8NXn7d0yA4ZGZLjNNSvw/viewform" style="text-decoration: none;"><button class="button button5" style=" font-family: 'Abel', sans-serif;">REGISTER</button></a>
 			
 			</div>
 			
