--- a/robosoccer.html
+++ b/robosoccer.html
@@ -27,7 +27,7 @@
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
-  padding: 16px 16px;
+  padding: 10px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
