--- a/robosoccer.html
+++ b/robosoccer.html
@@ -27,7 +27,7 @@
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
-  padding: 10px;
+  padding: 10px 0;
   text-align: center;
   text-decoration: none;
   display: inline-block;
