--- a/robosoccer.html
+++ b/robosoccer.html
@@ -27,7 +27,7 @@
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
-  padding: 10px 0;
+  padding: 20px 0;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -41,7 +41,7 @@
 
 
 .button5 {
-  background-color: white;
+  background-color: #eee;
   color: black;
   border: 2px solid black;
 }
