--- a/robosoccer.html
+++ b/robosoccer.html
@@ -27,7 +27,7 @@
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
-  padding: 20px 0;
+  padding: 0px 20px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
