--- a/robosoccer.html
+++ b/robosoccer.html
@@ -27,7 +27,10 @@
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
-  padding: 0px 20px;
+  padding-left: 20px;
+padding-right: 20px;
+			padding-top: 0;
+			padding-bottom: 0;
   text-align: center;
   text-decoration: none;
   display: inline-block;
