--- a/roborace.html
+++ b/roborace.html
@@ -21,7 +21,71 @@
 		<script src="includes/js/modernizr-2.6.2.min.js"></script>
 		
 		<link href="https://fonts.googleapis.com/css?family=Abel|Abril+Fatface|Anton|Lobster|PT+Sans+Caption|Russo+One|Sedgwick+Ave+Display" rel="stylesheet"> 
-			</head>
+			
+	<style>
+
+		.button {
+
+  background-color: #4CAF50; /* Green */
+
+  border: none;
+
+  color: white;
+
+  padding-left: 20px;
+
+padding-right: 20px;
+
+			padding-top: 0;
+
+			padding-bottom: 0;
+
+  text-align: center;
+
+  text-decoration: none;
+
+  display: inline-block;
+
+  font-size: 16px;
+
+  margin: 4px 2px;
+
+  -webkit-transition-duration: 0.4s; /* Safari */
+
+  transition-duration: 0.4s;
+
+  cursor: pointer;
+
+}
+
+
+
+
+
+
+
+.button5 {
+
+  background-color: #eee;
+
+  color: black;
+
+  border: 2px solid black;
+
+}
+
+
+
+.button5:hover {
+
+  background-color: black;
+
+  color: white;
+
+}
+
+		</style>
+	</head>
 	<body>
 	
 	<div style="width:100%;  background-image: url(images/back1.jpg); background-size: cover;">
@@ -43,6 +107,10 @@
 					<h1 style="color: #333; font-family: 'Abel', sans-serif; font-size: 18px; margin-top: 0px">Time: 10AM Onwards </h1>
 					<h1 style="color: #333; font-family: 'Abel', sans-serif; font-size: 18px; margin-top: 0px">Prizes Worth: 15K </h1>
 					<h1 style="color: #333; font-family: 'Abel', sans-serif; font-size: 18px; margin-top: 0px">Team Size: 1-4 members. </h1>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLScdLiRFrniRCWIf663k1zTLbdptgwiQ5PtQ71NHTHoSgGAmLw/viewform" style="text-decoration: none;"><button class="button button5" style=" font-family: 'Abel', sans-serif;">REGISTER</button></a>
+
+			
+			
 			</div>
 			
 	
